<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, beursActivity!</string>
    <string name="app_name">Beurs Game</string>
    <string name="loading">Loading</string>
    <string name="login">Facebook Login</string>
    <string name="btnlogin">Login</string>
    <string name="txtusername">myfacebook@email.com</string>
    <string name="txtpassword">Password</string>

    <string name="hello">Global Coffin Enterprises\nProtoType</string>
    <string name="app_name">BeursSpel</string>
    <string name="PR">Profile</string>
    <string name="CO">Companies</string>
    <string name="B">My Loans</string>
    <string name="Q">Quit</string>
    <string name="T">Tutorial</string>
    <string name="Next">Next</string>
    <string name="uitleg1">Uitleg spel algemeen</string>
    <string name="uitleg2">Uitleg spelen met facebook vrienden</string>
    <string name="uitleg3">Uitleg andere funcies van het spel</string>
    <string name="PRE">Previous</string>
    <string name="INV">Invesments</string>
    <string name="BoD">Board of Directors</string>
    <string name="RES">Results</string>
    <string name="BS">Buy Stocks</string>
    <string name="SNC">Start New Company</string>
    <string name="BB">Your Companies</string>
    <string name="Loan">Choose the amout of neuro you wish to loan</string>
    <string name="PL">Hier komt de informatie over de lening die deze speler heeft.</string>
    <string name="lijstKiesLenen">Kies een bedrag</string>
    <string-array name="lijstBedrage">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
    </string-array>

    
</resources>